# plaiground

./: .gitignore  README.md  mcp-lab-config.json  mcp-servers.json  package.json  pnpm-lock.yaml  run.sh  turbo.json
.cursor/rules/: coding-standards.mdc  data-flow-architecture.mdc  extensibility-model.mdc  feature-priorities.mdc  mcp-client-implementation.mdc  mcp-host-implementation.mdc  mcp-protocol-standards.mdc  project-overview.mdc  project-structure.mdc  technical-stack.mdc  ui-components.mdc  user-experience-principles.mdc  user-feedback-collection.mdc
.specstory/: .project.json
.specstory/history/: 2025-04-25_19-00-continuação-da-implementação-do-@todo-md.md  2025-04-28_13-05-implementação-e-visão-do-projeto.md  2025-04-28_17-44-correção-de-erros-no-projeto-mcp.md
.turbo/daemon/: 0a5c074b26bda2a1-turbo.log.2025-04-25
docs/: TODO.md
mcp-lab/: README.md  create-server.js
mcp-lab/backend/: package-lock.json  package.json  tsconfig.json
mcp-lab/backend/src/: discovery.ts  main.ts
mcp-lab/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
mcp-lab/frontend/public/: index.html
mcp-lab/frontend/src/: App.tsx  index.css  index.tsx  mcp-styles.css  store.ts
mcp-lab/templates/python/basic/: README.md  pyproject.toml  server.py
mcp-servers/filesystem-server/: package-lock.json  package.json  tsconfig.json
scripts/: monitor-server.ts  run-host.ts
shared/: index.ts  package-lock.json  package.json  tsconfig.json
(+10 files in other folders)
